// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active 1`] = `
Object {
  "css": Object {
    "&:active": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`checked 1`] = `
Object {
  "css": Object {
    "&:checked": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`default 1`] = `
Object {
  "css": Object {
    "&:default": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`empty 1`] = `
Object {
  "css": Object {
    "&:empty": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`enabled 1`] = `
Object {
  "css": Object {
    "&:enabled": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`even 1`] = `
Object {
  "css": Object {
    "&:even": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`evenOfType 1`] = `
Object {
  "css": Object {
    "&:nth-of-type(even)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`first 1`] = `
Object {
  "css": Object {
    "&:first": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`firstOfType 1`] = `
Object {
  "css": Object {
    "&:first-of-type": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`focus 1`] = `
Object {
  "css": Object {
    "&:focus": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`focusVisible 1`] = `
Object {
  "css": Object {
    "&:focus-visible": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`focusWithin 1`] = `
Object {
  "css": Object {
    "&:focus-within": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`hover 1`] = `
Object {
  "css": Object {
    "&:hover": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`indeterminate 1`] = `
Object {
  "css": Object {
    "&:indeterminate": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`invalid 1`] = `
Object {
  "css": Object {
    "&:invalid": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`last 1`] = `
Object {
  "css": Object {
    "&:last": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`lastOfType 1`] = `
Object {
  "css": Object {
    "&:last-of-type": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`link 1`] = `
Object {
  "css": Object {
    "&:link": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notChecked 1`] = `
Object {
  "css": Object {
    "&:not(:checked)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notDisabled 1`] = `
Object {
  "css": Object {
    "&:not(:disabled)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notFirst 1`] = `
Object {
  "css": Object {
    "&:not(:first)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notFirstOfType 1`] = `
Object {
  "css": Object {
    "&:not(:first-of-type)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notLast 1`] = `
Object {
  "css": Object {
    "&:not(:last)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notLastOfType 1`] = `
Object {
  "css": Object {
    "&:not(:last-of-type)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notOnlyChild 1`] = `
Object {
  "css": Object {
    "&:not(:only-child)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`notOnlyOfType 1`] = `
Object {
  "css": Object {
    "&:not(:only-of-type)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`odd 1`] = `
Object {
  "css": Object {
    "&:odd": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`oddOfType 1`] = `
Object {
  "css": Object {
    "&:nth-of-type(odd)": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`onlyChild 1`] = `
Object {
  "css": Object {
    "&:only-child": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`onlyOfType 1`] = `
Object {
  "css": Object {
    "&:only-of-type": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`optional 1`] = `
Object {
  "css": Object {
    "&:optional": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`placeholderShown 1`] = `
Object {
  "css": Object {
    "&:placeholder-shown": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`readOnly 1`] = `
Object {
  "css": Object {
    "&:read-only": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`readWrite 1`] = `
Object {
  "css": Object {
    "&:read-write": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`required 1`] = `
Object {
  "css": Object {
    "&:required": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`root 1`] = `
Object {
  "css": Object {
    "&:root": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`target 1`] = `
Object {
  "css": Object {
    "&:target": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`valid 1`] = `
Object {
  "css": Object {
    "&:valid": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`visited 1`] = `
Object {
  "css": Object {
    "&:visited": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;
